# ComfyUI_StableAnimator

./: .gitignore  .gitmodules  README.cn.md  README.md  __init__.py  pyproject.toml
.github/workflows/: publish.yml
StableAnimator/: __init__.py  app.py
StableAnimator/animation/modules/: face_model.py
utils/: face_model.py  image_utils.py
utils/dwpose/: dwpose_detector.py  skeleton_extraction.py  wholebody.py
workflow/: example.json  stable_animator_sample.json
