[project]
name = "stableanimator"
description = "ComfyUI nodes for StableAnimator"
version = "0.0.1"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/HJH-AILab/ComfyUI_StableAnimator"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "hjh-ailab"
DisplayName = "ComfyUI_StableAnimator"
Icon = ""
